[project]
name = "ComfyUI-LoadImageURL"
version = "1.0.0"
description = "Load images in ComfyUI from URLs, local file uploads, or ComfyUI managed directories (temp, input, output), with security validation and live preview"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["comfyui", "image", "url", "loader", "security", "ai", "stable-diffusion"]
authors = [
    {name = "Insecure Erasure", email = "insecure.erasure@proton.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "pillow>=9.0.0",
    "numpy>=1.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
security = [
    "imageio>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/insecure-erasure/ComfyUI-LoadImageURL"
Repository = "https://github.com/insecure-erasure/ComfyUI-LoadImageURL"
Issues = "https://github.com/insecure-erasure/ComfyUI-LoadImageURL/issues"
Changelog = "https://github.com/insecure-erasure/ComfyUI-LoadImageURL/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_load_image_url"]

[tool.comfy]
PublisherId = "insecure-erasure"
DisplayName = "Load Image (URL/Path)"
Icon = ""
